# shushbin

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  Doxyfile  README.md
include/error/: program_error_codes.hpp
include/pe_translator/: instructions.hpp  pe_support.hpp  pe_translator.hpp
include/utils/: arguments_parser.hpp  arithmetic.hpp  string.hpp  strings.hpp  vector.hpp
resources/: template.asm
src/: main.cpp  pe_translator.cpp
test/: arg_parser_tests.cpp  test.cpp
